--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,17 @@
 
 *
 {
+  margin: 0;
+  padding: 0;
   font-family: 'Poppins', sans-serif;
 }
+
 body
 {
   background: #0a2a43;
   min-height: 1500px;
 }
+
 section
 {
   position: relative;
@@ -60,4 +64,78 @@ section img
 #road
 {
   z-index: 2;
+}
+#txt 
+{
+  color: white;
+  width: 90vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5%;
+  margin-top: 10%;
+  white-space: pre;
+}
+
+::-webkit-scrollbar
+{
+  width: 0;
+}
+
+#scrollPath
+{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 10px;
+  height: 100%;
+  background: rgba(255,255,255,0,0.05)
+}
+
+#progressbar
+{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 10px;
+  background: linear-gradient(to top, #a2c2db, #577790);
+
+}
+
+@keyframes animate 
+{
+  0%, 100%
+  {
+    filter: hue-rotate(0deg);
+  }
+  50% 
+  {
+    filter: hue-rotate(360deg);
+  }
+}
+
+#progressbar:before
+{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #008aff, #00ffe6);
+
+  filter: blur(30px);
+}
+
+#progressbar:after
+{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #008aff, #00ffe6);
+
+  filter: blur(30px);
 }
